tests/rosetta/transpiler/Java/call-an-object-method-2.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:2: error: invalid method declaration; return type required
    static fn():void[] funcs = newFactory();
           ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:2: error: ';' expected
    static fn():void[] funcs = newFactory();
               ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:2: error: <identifier> expected
    static fn():void[] funcs = newFactory();
                    ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:2: error: <identifier> expected
    static fn():void[] funcs = newFactory();
                            ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:3: error: invalid method declaration; return type required
    static fn():void New = funcs[0];
           ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:3: error: ';' expected
    static fn():void New = funcs[0];
               ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:3: error: '(' expected
    static fn():void New = funcs[0];
                         ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:3: error: ']' expected
    static fn():void New = funcs[0];
                                 ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:4: error: invalid method declaration; return type required
    static fn():void Count = funcs[1];
           ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:4: error: ';' expected
    static fn():void Count = funcs[1];
               ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:4: error: '(' expected
    static fn():void Count = funcs[1];
                           ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:4: error: ']' expected
    static fn():void Count = funcs[1];
                                   ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:21: error: invalid method declaration; return type required
    static fn():void[] newFactory() {
           ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:21: error: ';' expected
    static fn():void[] newFactory() {
               ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:21: error: <identifier> expected
    static fn():void[] newFactory() {
                    ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:21: error: invalid method declaration; return type required
    static fn():void[] newFactory() {
                       ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:23: error: ';' expected
        fn():Box New = () -> {
            ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:25: error: illegal start of expression
    static Box b = new Box(sn);
    ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:26: error: illegal start of type
    if (sn == 1) {
    ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:26: error: <identifier> expected
    if (sn == 1) {
          ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:28: error: illegal start of type
    } else     if (sn == 2) {
      ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:28: error: <identifier> expected
    } else     if (sn == 2) {
                     ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:31: error: illegal start of type
    return b;
    ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:31: error: <identifier> expected
    return b;
            ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:33: error: class, interface, enum, or record expected
        fn():int Count = () -> sn;
        ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:34: error: class, interface, enum, or record expected
        return new fn():void[]{New, Count};
        ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:35: error: class, interface, enum, or record expected
    }
    ^
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:36: error: unnamed classes are a preview feature and are disabled by default.
    public static void main(String[] args) {
                  ^
  (use --enable-preview to enable unnamed classes)
/tmp/TestJavaTranspiler_Rosetta_Goldencall-an-object-method-21053722435/001/Main.java:72: error: class, interface, enum, or record expected
}
^
29 errors
